force-app/main/default/objects/cdcpc__RD_Option_Codes__c/cdcpc__RD_Option_Codes__c.object-meta.xml
<CustomObject>
    <label>RD Option Code</label>
    <nameField>
        <label>RD Option Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Option Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>