force-app/main/default/objects/cdcpc__RD_Option_Codes__c/fields/cdcpc__DiscOpt__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__DiscOpt__c</fullName>
    <label>DiscOpt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>