force-app/main/default/objects/cdcpc__RD_Option_Codes__c/fields/cdcpc__GirdleCovOpt__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__GirdleCovOpt__c</fullName>
    <label>GirdleCovOpt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>