force-app/main/default/objects/cdcpc__RD_Option_Codes__c/fields/cdcpc__GirdleOpt__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__GirdleOpt__c</fullName>
    <label>GirdleOpt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>