force-app/main/default/objects/cdcpc__RD_Option_Codes__c/fields/cdcpc__HandSuptOpt__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__HandSuptOpt__c</fullName>
    <label>HandSuptOpt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>