force-app/main/default/objects/cdcpc__RD_Option_Codes__c/fields/cdcpc__HolderInlOpt__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__HolderInlOpt__c</fullName>
    <label>HolderInlOpt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>