force-app/main/default/objects/cdcpc__RD_Option_Codes__c/fields/cdcpc__HolderOutOpt__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__HolderOutOpt__c</fullName>
    <label>HolderOutOpt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>