force-app/main/default/objects/cdcpc__RD_Option_Codes__c/fields/cdcpc__ILinerOpt__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__ILinerOpt__c</fullName>
    <label>ILinerOpt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>