force-app/main/default/objects/cdcpc__RD_Option_Codes__c/fields/cdcpc__Inlet_Coating__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Inlet_Coating__c</fullName>
    <label>Inlet Coating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>