force-app/main/default/objects/cdcpc__RD_Option_Codes__c/fields/cdcpc__IRingOpt__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__IRingOpt__c</fullName>
    <label>IRingOpt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>