force-app/main/default/objects/cdcpc__RD_Option_Codes__c/fields/cdcpc__Metal_Girdle__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Metal_Girdle__c</fullName>
    <label>Metal Girdle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>