force-app/main/default/objects/cdcpc__RD_Option_Codes__c/fields/cdcpc__MSealOpt__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MSealOpt__c</fullName>
    <label>MSealOpt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>