force-app/main/default/objects/cdcpc__RD_Option_Codes__c/fields/cdcpc__OLinerOpt__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__OLinerOpt__c</fullName>
    <label>OLinerOpt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>