force-app/main/default/objects/cdcpc__RD_Option_Codes__c/fields/cdcpc__ORingOpt__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__ORingOpt__c</fullName>
    <label>ORingOpt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>