force-app/main/default/objects/cdcpc__RD_Option_Codes__c/fields/cdcpc__SlotCoverOpt__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__SlotCoverOpt__c</fullName>
    <label>SlotCoverOpt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>