force-app/main/default/objects/cdcpc__RD_Option_Codes__c/fields/cdcpc__SlotCoverStripsOpt__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__SlotCoverStripsOpt__c</fullName>
    <label>SlotCoverStripsOpt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>