force-app/main/default/objects/cdcpc__RD_Option_Codes__c/fields/cdcpc__Surface_Finish__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Surface_Finish__c</fullName>
    <label>Surface Finish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>