force-app/main/default/objects/cdcpc__RD_Option_Codes__c/fields/cdcpc__TSealOpt__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__TSealOpt__c</fullName>
    <label>TSealOpt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>