force-app/main/default/objects/cdcpc__RD_Option_Codes__c/fields/cdcpc__VacSuptOpt__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__VacSuptOpt__c</fullName>
    <label>VacSuptOpt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>